Fix horizontal scroll on mobile widths

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -32,7 +32,11 @@ $angle-top-and-bottom: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
     clip-path: $angle-bottom;
 
     .title {
-      font-size: 3.25rem;
+      font-size: 2.5rem;
+
+      @include media-breakpoint-up(md) {
+        font-size: 3.25rem;
+      }
     }
 
     .subtitle {
@@ -113,6 +117,15 @@ $angle-top-and-bottom: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
   &.team, &.governance, &.masternodes {
     h1 {
       color: #4a4a4a;
+    }
+  }
+
+  &.masternodes {
+    .masternodes-img {
+      height: 200px;
+      @include media-breakpoint-up(sm) {
+        height: 279px;
+      }
     }
   }
 
